# SFML-Chess

./: CMakeLists.txt  Makefile  README.md  chess  server
src/: app.cpp  app.hpp  bishop.cpp  bishop.hpp  board.cpp  board.hpp  button.cpp  client.cpp  client.hpp  game.cpp  game.hpp  gameData.cpp  gameData.hpp  king.cpp  king.hpp  knight.cpp  main.cpp  offlineGame.cpp  offlineGame.hpp  onlineGame.cpp  onlineGame.hpp  onlinePieceSprite.cpp  onlinePieceSprite.hpp  pawn.cpp  pawn.hpp  piece.cpp  piece.hpp  pieceSprite.cpp  pieceSprite.hpp  pieces.hpp  queen.cpp  queen.hpp  rook.cpp  rook.hpp  server.cpp  server.hpp  sfmlColors.hpp  utils.cpp  utils.hpp
src/Chess/: bishop.cpp  bishop.hpp  board.cpp  board.hpp  king.cpp  king.hpp  knight.cpp  knight.hpp  pawn.cpp  pawn.hpp  piece.cpp  piece.hpp  queen.cpp  queen.hpp  rook.cpp  rook.hpp
src/Utils/: button.cpp  button.hpp  sfmlColors.cpp  sfmlColors.hpp  utils.cpp  utils.hpp
